--- a/count/index.html
+++ b/count/index.html
@@ -222,7 +222,7 @@
           calculate what to pull for your deposit.<br /><br />
           - <strong>Cameron</strong>.<br /><br />
           <a
-            href="https://github.com/cgolden15/sbf/blob/main/count/index.html"
+            href="https://github.com/cgolden15/sbf/tree/main/count"
             target="_blank"
             rel="noopener noreferrer"
             style="color: #00bcd4; text-decoration: underline"
