--- a/count/index.html
+++ b/count/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="calculator" role="main" aria-label="Shady Brook Drawer Counter">
       <div class="main-content">
-        <h1>Shady Brook Drawer Counter</h1>
+        <h1>SBF Drawer Counter</h1>
 
         <div class="start-bank-container">
           <label for="startBank">Start Bank ($):</label>
