--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Internal Tools</title>
+  <title>SBF Tools</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header><div class="branding">
       <img src="logo.png" alt="Company Logo" class="logo">
-    <h1> Internal Tools</h1>
+    <h1>Internal Tools</h1>
   </header>
 
   <main>
@@ -24,9 +24,9 @@
       <a href="https://stats.uptimerobot.com/SKZ4ypbRIr"><button>Open</button></a>
     </div>
     <div class="card fade-in">
-      <h2>Tool Manager</h2>
-      <p>Manage and configure access to internal tools.</p>
-      <a href="/tool-manager"><button>Open</button></a>
+      <h2>Event Calendar</h2>
+      <p>Check out our upcoming events!</p>
+      <a href="https://shadybrookfarm.com/pages/events-calendar"><button>Open</button></a>
     </div>
   </main>
 
@@ -35,3 +35,4 @@
   </footer>
 </body>
 </html>
+
